library/general/gpuresourcelimits/samples/gpu-exempt-over-limit/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gpu-exempt-over-limit
spec:
  containers:
    - name: dcgm
      image: nvidia/dcgm-exporter:3.1.7
      resources:
        limits:
          nvidia.com/gpu: "8"
