library/general/gpuresourcelimits/samples/gpu-max-disabled/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sGpuResourceLimits
metadata:
  name: max-gpu-per-container
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
